Refactor banking application: remove unused classes, clean up code, and improve test structure